kubernetes/apps/kyverno/tests/cli/agent-plane-process-isolation/values.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
namespaceSelector:
  - name: ploeg
    labels:
      kubernetes.io/metadata.name: ploeg
  - name: kepler
    labels:
      kubernetes.io/metadata.name: kepler
